<resources>
    <string name="app_name">CurriculumVitae</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Experiencias laborales -->
    <string name="experience_detail">  <![CDATA[
    <p>
    Líder del equipo de desarrollo (3 personas) en el proyecto de implementación de un sistema de tests automatizados con Selenium para la web corporativa de Pobeda Airlines LLC (Aeroflot Group), empleando C#, la implementación de Selenium para .NET, NUnit como framework de unit testing y llevando el desarrollo como BDD mediante Cucumber. <br><br>Implementación del sistema de logs para la web y todos los procesos asociados de Pobeda Airlines LLC, así como la preparación de las herramientas necesarias para la visualización y análisis de dichos logs (Kibana y Elastalert), empleando ElasticSearch como centro de datos y Elastic stack al completo.<br><br>Realización de tareas de mantenimiento en el backend de la página (C#) con pequeñas modificaciones del frontend (JavaScript).<br><br>Entorno de trabajo consistente en metodología ágil (SCRUM) utilizando Jira, Microsoft Project y Git Workflow. Hice uso de las librerías más comunes en el entorno .NET, como log4net y Castle Windsor.
    </p>
    <p>
    Desarrollo del programa de fidelización de clientes, incluyendo la creación de la web API del sistema con ASP.NET. <br><br>Realización de tareas de mantenimiento en el sistema centralizado de gestión de las clínicas, empleando C# y Team Foundation Server (TFS) en un entorno SCRUM.
    </p>
    <p>
    Desarrollos personalizados para el cliente final de webs basadas en Magento, con modificaciones del core mediante PHP y puesta en producción de las mismas, encargándome del mantenimiento posterior.<br><br>Desarrollo durante año y medio de la aplicación Android para cliente final en el negocio de la logística de la alimentación, que es empleada en tablets por los repartidores de la empresa con las siguientes funcionalidades:<br>- Gestionar e informar acerca del stock y su formato al repartidor<br>- Gestionar ventas, reservas y facturas<br>- Gestionar usuarios y credenciales para evitar interferencias con otros compañeros<br>- Incluir un sistema de catálogo para que los repartidores puedan vender nuevos artículos directamente al cliente<br>- Sincronización de información con 2 ERPs (SAP y EKON)<br><br>Para ello se creó una arquitectura basada en servicios web SOAP mediante ASP.NET, con una API intermedia empleando EntityFramework que permitían la sincronización de la información existente en el ERP para que estuviera actualizada en las tablets, tanto bajo demanda como cacheada para los casos en los que el repartidor no tuviera cobertura por realizar rutas de montaña.<br><br>También se realizaron varios desarrollos personalizados en .NET y SAP para clientes finales.
    </p>
    <p>
    Periodo de prácticas como desarrollador web y móvil en una empresa de venta online de cuchillería de Albacete. Durante las prácticas se realizaron diversas tareas, como la creación de webs asociadas (blogs), mejoras en la web principal (www.cuchilleriadeportiva.es), realización de tareas de posicionamiento (SEO y SEM) y desarrollo de la versión móvil de la página.
    </p>
    <p>
    Miembro del equipo de desarrollo de una página web gubernamental de gestión para el gobierno de Cantabria. El desarrollo se realizó mediante las tecnologías web basadas en J2EE, Struts, Spring e Hibernate.
    </p>
    ]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Placeholder</string>
    <string name="transition_experience">transition_experience</string>
    <string name="presentation">Presentation</string>
    <string name="formation">Formation</string>
    <string name="projects">Projects</string>
    <string name="contact">Contact</string>
    <string name="experience">Experience</string>
    <string name="title_activity_experience">ExperienceActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="description">Description</string>
    <string name="period">Period</string>
    <string name="place">Place</string>
    <string name="no_email_clients_installed">There are no email clients installed</string>
    <string name="website">Website</string>
    <string name="title">Title</string>
    <string name="contact_fragment_title">Contact</string>
    <string name="experience_fragment_title">Experience</string>
    <string name="formation_fragment_title">Formation</string>
    <string name="presentation_fragment_title">Presentation</string>
    <string name="projects_fragment_title">Projects</string>
    <string name="view_detail">View detail</string>
    <string name="hecho_por_moises_cano">Made by: Moisés Cano Torralba</string>
    <string name="source_code">The source code is available at: </string>
    <string name="github">https://github.com/moictab/CurriculumVitae</string>
    <string name="version">Version: 1.0</string>
    <string name="libraries_used">Libraries used:</string>
    <string name="google_gson">google/gson</string>
    <string name="butterknife">JakeWharton/butterknife</string>
    <string name="moises_cano_torralba">Moisés\n Cano Torralba</string>
    <string name="developer">Android developer</string>
    <string name="explore_my_app">Explore my app to know more about me</string>
</resources>
