<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_work"
            android:title="@string/experience" />
        <item
            android:id="@+id/nav_formation"
            android:icon="@drawable/ic_book"
            android:title="@string/formation" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_android"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_mail"
            android:title="@string/contact" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
